[gd_scene load_steps=5 format=3 uid="uid://etryf634fgt2"]

[ext_resource type="Script" uid="uid://bo7jfl76kboco" path="res://scene/ui/enemy血条/enemy_hp_bar.gd" id="1_5gutv"]
[ext_resource type="Texture2D" uid="uid://dibmms5v8qqo8" path="res://asset/image/enemy血条/血条主体.png" id="1_uxyri"]
[ext_resource type="Texture2D" uid="uid://1du7ic6ta0s3" path="res://asset/image/enemy血条/条_under.png" id="3_ofmgu"]
[ext_resource type="Texture2D" uid="uid://b5iqvaf210uiy" path="res://asset/image/enemy血条/绿色.png" id="4_34m7y"]

[node name="EnemyHpBar" type="Node2D"]
script = ExtResource("1_5gutv")

[node name="血条主体" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(10, -14)
texture = ExtResource("1_uxyri")

[node name="条Under" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(3.5, -0.625)
scale = Vector2(0.555, 0.3325)
texture = ExtResource("3_ofmgu")

[node name="TextureProgressBar_up" type="TextureProgressBar" parent="."]
offset_left = -150.0
offset_top = -108.0
offset_right = 234.0
offset_bottom = 108.0
scale = Vector2(0.494412, 0.462947)
pivot_offset = Vector2(213.869, 108.399)
value = 100.0
texture_progress = ExtResource("4_34m7y")

[node name="TextureProgressBar_under" type="TextureProgressBar" parent="."]
modulate = Color(1, 1, 1, 0.345098)
z_index = -1
offset_left = -150.0
offset_top = -108.0
offset_right = 234.0
offset_bottom = 108.0
scale = Vector2(0.494412, 0.462947)
pivot_offset = Vector2(213.869, 108.399)
value = 100.0
texture_progress = ExtResource("4_34m7y")

[node name="level_label" type="Label" parent="."]
z_index = 1
offset_left = -63.0
offset_top = -13.0
offset_right = -23.0
offset_bottom = 36.0
text = "
"
